--- a/index.html
+++ b/index.html
@@ -19,24 +19,32 @@
     <body>
         <div class="container">
             <div class="row">
-                <h3>Pat Connors</h3>
+                <div class="col-md-6">
+                    <h3>Pat Connors</h3>
+                </div>
             </div>
             <div class="row">
-                <p>
-                    I currently live in Cambridge, MA and study CS @ Harvard University. 
-                    Next fall I'll be working as a software engineer @ <a target="_blank" href="https://www.airbnb.com/">Airbnb</a>.
-                </p>                
+                <div class="col-md-6">
+                    <p>
+                        I currently live in Cambridge, MA and study CS @ Harvard University. 
+                        Next fall I'll be working as a software engineer @ <a target="_blank" href="https://www.airbnb.com/">Airbnb</a>.
+                    </p>                
+                </div>
             </div>
             <div class="row">
-                <p>
-                    I'm interested in distributed computing and applying software to real world problems.
-                    Most of my personal projects are written in Python, JavaScript & Java -- they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
-                </p>                
+                <div class="col-md-6">
+                    <p>
+                        I'm interested in distributed computing and applying software to real world problems.
+                        Most of my personal projects are written in Python, JavaScript & Java -- they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
+                    </p>                
+                </div>
             </div>
             <div class="row">
-                <p>
-                    You can reach me via <a target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
-                </p>                
+                <div class="col-md-6">
+                    <p>
+                        You can reach me via <a target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
+                    </p>                
+                </div>
             </div>
         </div>
         <!-- Optional JavaScript -->
