--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
         <link rel="stylesheet" href="style.css">
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon"/>
         <title>Pat Connors</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Pat Connors</h3>
+                    <h4>Hi, I'm Pat Connors</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <p>
                         I currently live in Cambridge, MA and study CS @ Harvard University. 
-                        Next fall I'll be working as a software engineer @ <a target="_blank" href="https://www.airbnb.com/">Airbnb</a>.
+                        Next fall I'll be working as a software engineer with <a target="_blank" href="https://www.airbnb.com/">Airbnb</a>.
                     </p>                
                 </div>
             </div>
