--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        I'm interested in distributed computing and applying software to real world problems.
-                        Most of my personal projects are written in Python, JavaScript & Java -- they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
+                        I'm interested in distributed computing and using software to solve real world problems.
+                        Most of my personal projects are written in Python, JavaScript & Java; they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
                     </p>                
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        You can reach me via <a target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
+                        Feel free to reach out via <a target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
                     </p>                
                 </div>
             </div>
