--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+        <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
         <title>Pat Connors</title>
     </head>
     <body>
