--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="col-md-6">
                     <p>
                         I currently live in Cambridge, MA and study CS @ Harvard University. 
-                        Next fall I'll be working as a software engineer with <a target="_blank" href="https://www.airbnb.com/">Airbnb</a>.
+                        Next fall I'll be working for <a target="_blank" href="https://www.airbnb.com/">Airbnb</a> as a software engineer.
                     </p>                
                 </div>
             </div>
