--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Hi, I'm Pat Connors</h4>
+                    <h4>Hi, I'm Pat Connors.</h4>
                 </div>
             </div>
             <div class="row">
