--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        I'm interested in distributed computing and using software to solve real world problems.
+                        I'm interested in distributed computing and using software to solve real-world problems.
                         Most of my personal projects are written in Python, JavaScript & Java; they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
                     </p>                
                 </div>
