--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <body>
 
         <div class="Aligner">
-            <iframe class="Aligner-item embed-responsive-item" src="https://lottiefiles.com/iframe/301-search-location" frameborder="0" allowfullscreen></iframe>
-            <!-- <div class="Aligner-item">PAtrick</div> -->
+            <div id="animation"></div>
         </div>
         <div class="container">
             <div class="row">
@@ -54,11 +53,13 @@
         </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <!-- <script src="https://cdnjs.com/libraries/bodymovin" type="text/javascript"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.3/lottie.js" type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-        <script src="main.js">
-        </script>
+        <script src="main.js"></script>
     </body>
+    
 </html>
