--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <p>
                         I currently live in Cambridge, MA and study CS @ Harvard University. 
-                        Next fall I'll be working for <a target="_blank" href="https://www.airbnb.com/">Airbnb</a> as a software engineer.
+                        Next fall I'll be working for <a class="hvr-underline-from-center" target="_blank" href="https://www.airbnb.com/">Airbnb</a> as a software engineer.
                     </p>                
                 </div>
             </div>
@@ -39,14 +39,14 @@
                 <div class="col-md-6">
                     <p>
                         I'm interested in distributed computing and using software to solve real-world problems.
-                        Most of my personal projects are written in Python, JavaScript & Java; they can be found on my <a target="_blank" href="https://github.com/patrickconnors23">github</a>.
+                        Most of my personal projects are written in Python, JavaScript & Java; they can be found on my <a class="hvr-underline-from-center" target="_blank" href="https://github.com/patrickconnors23">github</a>.
                     </p>                
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <p>
-                        Feel free to reach out via <a target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
+                        Feel free to reach out via <a class="hvr-underline-from-center" target="_blank" href="mailto:patconnors23@gmail.com">email</a>.
                     </p>                
                 </div>
             </div>
